feat: allow optional round selection
